Error 404 Page Styling Fixes
I fixed the bug where the elements in this page wouldn't line up
properly. This was simply because I didn't put the 'px' after the width
class in the CSS document...

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -388,7 +388,7 @@ a:hover {
 	font-size: 20px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 624;
+	width: 624px;
 	padding-top: 20px;
 }
 
@@ -418,7 +418,7 @@ a:hover {
 	font-size: 22px;
 	margin-left: auto;
 	margin-right: auto;
-	width: 851;
+	width: 851px;
 	padding-top: 20px;
 }
 
